--- a/src/main/resources/static/front/scss/style.scss
+++ b/src/main/resources/static/front/scss/style.scss
@@ -39,13 +39,13 @@ $border:                                            #666f74;
 $border02:                                          #e2e7ea;
 /*-------  1.1 Bootstrap  --------*/
 @import "variables";
-@import "../../node_modules/bootstrap/scss/bootstrap-reboot";
-@import "../../node_modules/bootstrap/scss/bootstrap-grid";
-/*-------  1.2 Magnific Popup  --------*/
-@import "../../node_modules/magnific-popup/dist/magnific-popup.css";
-@import "_custom_magnific_popup";
-/*-------  1.3 Perfect scrollbar  --------*/
-@import "../external/perfect-scrollbar/perfect-scrollbar.scss";
+//@import "../../node_modules/bootstrap/scss/bootstrap-reboot";
+//@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+///*-------  1.2 Magnific Popup  --------*/
+//@import "../../node_modules/magnific-popup/dist/magnific-popup.css";
+//@import "_custom_magnific_popup";
+///*-------  1.3 Perfect scrollbar  --------*/
+//@import "../external/perfect-scrollbar/perfect-scrollbar.scss";
 /*-------  1.4 Form  --------*/
 @import "_form";
 /*-------  1.5 typography  --------*/
